[tool.poetry]
name = "battlechess"
version = "0.1.0"
description = "chess with fog of war"
authors = ["Antoine <guyver2@github.com>", "Quim Nuss <quimnuss@github.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
httpx = "^0.25.2"
python-decouple = "^3.8"
pathlib2 = "^2.3.7.post1"
bcrypt = "^4.1.2"
sqlalchemy-utils = "^0.41.1"


[tool.poetry.group.standalone.dependencies]
pygame = "^2.5.2"


[tool.poetry.group.api.dependencies]
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
uvicorn = "^0.24.0.post1"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
pre-commit = "^3.5.0"
ipdb = "^0.13.13"
isort = "^5.12.0"
ruff = "^0.1.6"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
